<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTittleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_permainan"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTittleDialog"
        app:layout_constraintStart_toStartOf="@+id/tvTittleDialog"
        app:layout_constraintTop_toBottomOf="@+id/tvTittleDialog"
        tools:text="SERI !" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlayAgain"
        android:layout_marginTop="20dp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_purple"
        android:text="@string/main_lagi"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackToMenu"
        android:layout_marginTop="10dp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_orange"
        android:text="@string/kembali_ke_menu"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPlayAgain"
        app:layout_constraintStart_toStartOf="@+id/btnPlayAgain"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayAgain" />


</androidx.constraintlayout.widget.ConstraintLayout>