<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/player"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/ivBanner"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:text="@string/computer"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/ivBanner"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/ic_banner"
        android:rotation="-10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivUserBatu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_batu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBanner"/>

    <ImageView
        android:id="@+id/ivComBatu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_batu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBanner" />

    <ImageView
        android:id="@+id/ivUserKertas"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_kertas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUserBatu" />

    <ImageView
        android:id="@+id/ivComKertas"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_kertas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivComBatu" />

    <ImageView
        android:id="@+id/ivUserGunting"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_gunting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUserKertas" />

    <ImageView
        android:id="@+id/ivComGunting"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_gunting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivComKertas" />

    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:gravity="center"
        android:rotation="-10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ivUserKertas"
        app:layout_constraintRight_toLeftOf="@id/ivComKertas"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivReset"
        android:src="@drawable/ic_refresh"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>